feat: developed the first part of the New structure POC

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -42,7 +42,19 @@
           data-icon="fas fa-fw fa-home"
           data-label="Página inicial"
           data-link="home"
+        ></nsj-menu-item>
+        <!-- POCs -->
+        <nsj-menu-item
+          ui-sref-active="active-line"
+          data-icon="fas fa-fw fa-flask"
+          data-label="POCs"
+          item-dropdown
         >
+          <nsj-menu-item
+            ui-sref-active="active-line"
+            data-label="Nova estrutura frontend"
+            data-link="novaestrutura"
+          ></nsj-menu-item>
         </nsj-menu-item>
       </nsj-menu-list>
       <!-- Configurações -->
