--- a/src/app/modules/Home/home.html
+++ b/src/app/modules/Home/home.html
@@ -1,5 +1,7 @@
 <main class="height-full full-page-wrapper">
   <section class="row">
-    <h1>Bem vindo</h1>
+    <div class="col-xs-12">
+      <h2>Bem vindo</h2>
+    </div>
   </section>
 </main>
